--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "test-all": "testcafe all ./page_model/tests",
+    "test-firefox": "testcafe firefox ./page_model/tests",
     "test-chrome": "testcafe chrome ./page_model/tests",
+    "test-chrome:headless": "testcafe chrome:headless ./page_model/tests",
     "test-chrome-debug": "testcafe chrome ./page_model/tests -d"
   },
   "author": "Cesar Cornejo",
